# jira-metrics

./: README.md  app.py  env.sample  main.py  metrics.py  pyproject.toml  report.py
src/: ai_feedback.py  confluence_client.py  data_processing.py  jira_client.py  rag.py  report.py
